✨ Fix: Session persistence, UI improvements, and home navigation
- Configure Supabase to use localStorage for persistent sessions
- Add clickable logo header to navigate back to dashboard
- Improve StaffHub description for clarity
- Enhance application cards formatting with icons and better spacing

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,5 @@ VITE_SUPABASE_URL=https://igjedwdxqwkpbgrmtrrq.supabase.co
 VITE_SUPABASE_ANON_KEY=tu_anon_key_aqui
 VITE_DISCORD_CLIENT_ID=tu_client_id_aqui
 VITE_DISCORD_REDIRECT_URI=https://vonssyb.github.io/nacionmx-postulaciones/callback
+VITE_DISCORD_WEBHOOK_URL=https://discord.com/api/webhooks/TU_WEBHOOK_ID/TU_WEBHOOK_TOKEN
+
