✨ Complete portal improvements
- Bot endpoint /api/assign-postulante-role ready
- Improved application review UI with executive summary
- Enhanced visual hierarchy and data presentation
- Updated environment configuration
- Ready for production deployment

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,13 @@
 # Environment Variables
-VITE_SUPABASE_URL=https://igjedwdxqwkpbgrmtrrq.supabase.co
+VITE_SUPABASE_URL=https://igjedwdxqw kpbgrmtrrq.supabase.co
 VITE_SUPABASE_ANON_KEY=tu_anon_key_aqui
 VITE_DISCORD_CLIENT_ID=tu_client_id_aqui
 VITE_DISCORD_REDIRECT_URI=https://vonssyb.github.io/nacionmx-postulaciones/callback
+
+# Discord Webhook for notifications (approve/reject)
 VITE_DISCORD_WEBHOOK_URL=https://discord.com/api/webhooks/TU_WEBHOOK_ID/TU_WEBHOOK_TOKEN
+
+# Bot API for role assignment
+VITE_BOT_WEBHOOK_URL=http://localhost:8000
+VITE_BOT_API_KEY=your-secure-api-key-here
 
